// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Slider control 1`] = `
<Slider
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  max={50}
  maxHeight={null}
  maxWidth={null}
  min={1}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Slider"
  onSelect={[Function]}
  padding={null}
  ripple={false}
  scale={2}
  selected={false}
  sizing="normal"
  snap={true}
  startPosition={0}
  style={Object {}}
  testing={true}
  theme={null}
  ticks={5}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test disabling a Slider control 1`] = `
<Slider
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  max={100}
  maxHeight={null}
  maxWidth={null}
  min={0}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Slider"
  onSelect={[Function]}
  padding={null}
  ripple={false}
  scale={2}
  selected={false}
  sizing="normal"
  snap={true}
  startPosition={0}
  style={Object {}}
  testing={true}
  theme={null}
  ticks={5}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Slider props object 1`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "none",
  "max": 100,
  "maxHeight": null,
  "maxWidth": null,
  "min": 0,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Slider",
  "onSelect": [Function],
  "padding": null,
  "ripple": false,
  "scale": 1,
  "selected": false,
  "sizing": "normal",
  "snap": false,
  "startPosition": 0,
  "style": Object {},
  "testing": true,
  "theme": null,
  "ticks": 0,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Slider props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
  "x": 0,
}
`;

exports[`Test with bad min/max values 1`] = `
<Slider
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  max={0}
  maxHeight={null}
  maxWidth={null}
  min={-1}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Slider"
  onSelect={[Function]}
  padding={null}
  ripple={false}
  scale={1}
  selected={false}
  sizing="normal"
  snap={false}
  startPosition={0}
  style={Object {}}
  testing={true}
  theme={null}
  ticks={0}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;
